# autonomous_drones

./: README.md  docker-compose.yml
ci/: README.md
docker/: Dockerfile  README.md
docs/: add_new_package_template.md  architecture_overview.md  certification_roadmap.md  code_standards.md  decision_design.md  development_roadmap.md  digital_twin_strategy.md  health_monitor_design.md  navigation_design.md  package_review_checklist.md  perception_design.md  rosbag_strategy.md  safety_case_strategy.md  sensor_fusion_design.md  technology_stack.md  tracking_design.md  validation_strategy.md
src/: README.md
src/core_packages/decision/: CMakeLists.txt  README.md  package.xml
src/core_packages/decision/config/: core_packages_decision.yaml
src/core_packages/health_monitor/: CMakeLists.txt  README.md  package.xml
src/core_packages/health_monitor/config/: core_packages_health_monitor.yaml
src/core_packages/navigation/: CMakeLists.txt  README.md  package.xml
src/core_packages/navigation/config/: core_packages_navigation.yaml
src/core_packages/perception/: CMakeLists.txt  README.md  package.xml
src/core_packages/perception/config/: core_packages_perception.yaml
src/core_packages/sensor_fusion/: CMakeLists.txt  README.md  package.xml
src/core_packages/sensor_fusion/config/: core_packages_sensor_fusion.yaml
src/core_packages/tracking/: CMakeLists.txt  README.md  package.xml
src/core_packages/tracking/config/: core_packages_tracking.yaml
src/sensors/cameras/: CMakeLists.txt  README.md  package.xml
src/sensors/cameras/config/: sensors_cameras.yaml
src/sensors/gps/: CMakeLists.txt  README.md  package.xml
src/sensors/gps/config/: sensors_gps.yaml
src/sensors/imu/: CMakeLists.txt  README.md  package.xml
src/sensors/imu/config/: sensors_imu.yaml
src/sensors/lidar/: CMakeLists.txt  README.md  package.xml
src/sensors/lidar/config/: sensors_lidar.yaml
src/sensors/radar/: CMakeLists.txt  README.md  package.xml
src/sensors/radar/config/: sensors_radar.yaml
src/simulation/digital_twin/: CMakeLists.txt  README.md  package.xml
src/simulation/digital_twin/config/: simulation_digital_twin.yaml
src/simulation/rosbag_database/: CMakeLists.txt  README.md  package.xml
src/simulation/rosbag_database/config/: simulation_rosbag_database.yaml
