<?xml version="1.0"?>
<package format="3">
  <name>core_packages_decision</name>
  <version>0.1.0</version>
  <description>Mission decision engine, behavior management, mission planning, task scheduling, objective prioritization, and adaptive re-planning.</description>
  <maintainer email="engineering@example.com">Autonomy Engineering</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
