<?xml version="1.0"?>
<package format="3">
  <name>core_packages_health_monitor</name>
  <version>0.1.0</version>
  <description>Vehicle health, subsystem diagnostics, watchdogs, fail-safe state monitoring, certification readiness, and operational readiness status.</description>
  <maintainer email="engineering@example.com">Autonomy Engineering</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
