<?xml version="1.0"?>
<package format="3">
  <name>simulation_digital_twin</name>
  <version>0.1.0</version>
  <description>Digital Twin simulation bridge for virtual sensors, scenario playback, mission rehearsal, and synthetic data generation.</description>
  <maintainer email="engineering@example.com">Autonomy Engineering</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
